--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "element-ui": "^2.15.8",
     "vue": "^2.5.2",
+    "vue-i18n": "^8.27.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
