--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "element-ui": "^2.15.8",
     "lib-flexible": "^0.3.2",
     "postcss-pxtorem": "^5.1.1",
