--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^3.4.1",
     "element-ui": "^2.15.8",
     "lib-flexible": "^0.3.2",
     "postcss-pxtorem": "^5.1.1",
