--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^3.4.1",
     "element-ui": "^2.15.8",
+    "js-base64": "^3.7.2",
     "lib-flexible": "^0.3.2",
     "postcss-pxtorem": "^5.1.1",
     "vue": "^2.5.2",
@@ -33,6 +34,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
+    "crypto-js": "^4.1.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
